WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216021
Some apps linked beyond iOS 13.4 don't respect mouse events, only touch events
https://bugs.webkit.org/show_bug.cgi?id=216021
Summary
Some apps linked beyond iOS 13.4 don't respect mouse events, only touch events
Tim Horton
Reported
2020-08-31 18:57:17 PDT
Some apps linked beyond iOS 13.4 don't respect mouse events, only touch events
Attachments
Patch
(8.96 KB, patch)
2020-08-31 19:03 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.78 KB, patch)
2020-09-01 10:49 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.78 KB, patch)
2020-09-01 10:52 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.76 KB, patch)
2020-09-01 11:07 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-08-31 19:03:48 PDT
Created
attachment 407647
[details]
Patch
Tim Horton
Comment 2
2020-08-31 19:03:50 PDT
<
rdar://problem/64830335
>
Wenson Hsieh
Comment 3
2020-08-31 20:46:47 PDT
Comment on
attachment 407647
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=407647&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:8604 > + const char *warningVersion = "";
Nit - * on the other side. I think you could also remove the `BOOL& shouldLogWarning` argument if you initialized this string to null, and then just checked for a non-null warningVersion below instead.
Tim Horton
Comment 4
2020-09-01 10:49:42 PDT
Created
attachment 407696
[details]
Patch
Tim Horton
Comment 5
2020-09-01 10:52:53 PDT
Created
attachment 407697
[details]
Patch
Tim Horton
Comment 6
2020-09-01 11:07:50 PDT
Created
attachment 407699
[details]
Patch
EWS
Comment 7
2020-09-01 11:52:03 PDT
Committed
r266407
: <
https://trac.webkit.org/changeset/266407
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407699
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug